<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.hyvee.android"
	style="@style/MainWindow">

	<ScrollView 
		android:id="@+id/scroll"
		style="@style/ScrollContent">

		<LinearLayout 
			style="@style/LinearLayoutWrap">
			
		    <LinearLayout style="@style/LinearLayoutContent">
		    
		        <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:layout_marginTop="20dp"
		            android:textStyle="bold"
		            android:textColor="@color/blue_dark"
		            android:textSize="30dp"
		            android:text="@string/about_title"/>
		        
		        <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:layout_marginTop="5dp"
		            android:textColor="@color/gray_dark"
		            android:textStyle="bold"
		            android:textSize="20dp"
		            android:text="@string/about_subtitle"/>
		        
		        <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:layout_marginTop="5dp"
		            android:textColor="@color/gray_dark"
		            android:textStyle="bold"
		            android:textSize="20dp"
		            android:text="@string/about_subtitle2"/>
		        
		        <TextView 
		            style="@style/Widget.TextView.About.Paragraph"
		            android:layout_marginTop="30dp"
		            android:text="@string/about_text_1"/>
		        
		        <TextView 
		            style="@style/Widget.TextView.About.Paragraph"
		            android:layout_marginTop="10dp"
		            android:text="@string/about_text_2"/>
		        
		        <TextView 
		            style="@style/Widget.TextView.About.Paragraph"
		            android:layout_marginTop="10dp"
		            android:text="@string/about_text_3"/>
		        
		        <TextView 
		            style="@style/Widget.TextView.About.Subtitle"
		            android:layout_marginTop="20dp"
		            android:text="@string/about_membros"/>
		        
		        <TextView 
		            style="@style/Widget.TextView.About.Name"
		            android:text="@string/about_membro1"/>
		        
		        <TextView 
		            style="@style/Widget.TextView.About.Name"
		            android:text="@string/about_membro2"/>
		        
		        <TextView 
		            style="@style/Widget.TextView.About.Name"
		            android:text="@string/about_membro3"/>
		        
		        <TextView 
		            style="@style/Widget.TextView.About.Subtitle"
		            android:layout_marginTop="15dp"
		            android:text="@string/about_orientadores"/>
		        
		        <TextView 
		            style="@style/Widget.TextView.About.Name"
		            android:text="@string/about_orientador1"/>
		        
		        <TextView 
		            style="@style/Widget.TextView.About.Name"
		            android:text="@string/about_orientador2"/>
		    </LinearLayout>
		</LinearLayout>
	</ScrollView>

	<!-- header -->
	<include layout="@layout/include_header" android:id="@+id/header" />


</FrameLayout>